v0.11 2011.09.10

    Release of the first interesting version.
