@@ -1,3 +1,6 @@
+
+   Eliminate cache from the Ajax get requests as IE (both 8 and 9) would cache by default.
+
 v0.11 2011.09.10
 
     Release of the first interesting version.
